change homepage font to fix line break on hover

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     /* margin: 0px; */
     font-family: Inter, sans-serif;
     color: white;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
     line-height: 1.2;
 }
